oxiplate-derive/tests/broken/strings/string-continuation-span.stderr
error: Expected an expression.
 --> tests/broken/strings/string-continuation-span.rs:6:6
  |
6 |     {{")]
  |      ^
